[package]
name = "lojidoc"
version = "0.3.1"
license = "Apache-2.0"
description = "A tool for generating documentation for java projects."
keywords = ["documentation", "java", "javadoc", "parser"]
authors = ["Josh Brudnak <jobrud314@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JoshBrudnak/Lojidoc"
documentation = "https://joshbrudnak.github.io/Lojidoc/"

exclude = [
    ".travis.yml"
]

[badges]
travis-ci = { repository = "JoshBrudnak/Lojidoc" }

[dependencies]
git2 = {version = "0.7.5", default-features = false}
threadpool = "1.7.1"
mdbook = "0.2.1"
clap = "2.32"
colored = "1.6"
